# Skill-Demand-Supply-Joint-Prediction

./: .gitignore  Check_input.ipynb  README.md  RNN.out  SG.out  Statistical Seq model.ipynb  Test Func.ipynb  Test dataloader.ipynb  VAR.ipynb  arima.py  bash.sh  checkwandbresult.ipynb  combine_graph.py  config.json  gen_bash.py  graph_feature.ipynb  parse_config.py  requirements.txt  script_uni.py  static_graph.out  train.py
artifacts/test_samples_1gihnn7o:v0/: predictions.table.json
artifacts/test_samples_2vm72wgo:v0/: predictions.table.json
artifacts/test_samples_36oonjtw:v0/: predictions.table.json
base/: base_data_loader.py  base_trainer.py
data_loader/: data_loaders.py  utils.py
doctest-output/: Digraph.dot  Digraph.gv
graphviz-2.46.0/: CHANGELOG.md  ChangeLog  Doxyfile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  builddate.h  config.h.in  configure  configure.ac  graphviz.sln  graphviz_version.h  version.m4
graphviz-2.46.0/cmd/: Makefile.in
graphviz-2.46.0/cmd/dotty/: Makefile.am  Makefile.in  dotty.bsh  dotty.sh  dotty.vcxproj
graphviz-2.46.0/cmd/dotty/mswin32/: dotty.c
graphviz-2.46.0/cmd/edgepaint/: Makefile.am  Makefile.in  edgepaint.1  edgepaint.vcxproj  edgepaintmain.c
graphviz-2.46.0/cmd/gvedit/: Makefile.am  Makefile.in  csettings.h  gvedit.vcxproj  main.cpp  mainwindow.cpp  moc_csettings.cpp  moc_imageviewer.cpp  moc_mainwindow.cpp  moc_mdichild.cpp  qrc_mdi.cpp
graphviz-2.46.0/cmd/gvedit/images/: Makefile.in
graphviz-2.46.0/cmd/gvedit/ui/: Makefile.in
graphviz-2.46.0/cmd/gvmap/: Makefile.am  Makefile.in  cluster.c  country_graph_coloring.c  country_graph_coloring.h  gvmap.c  gvmap.sh  gvmap.vcxproj  make_map.c  make_map.h  power.c  power.h
graphviz-2.46.0/cmd/gvpr/: Makefile.am  Makefile.in  gvpr.vcxproj  gvprmain.c
graphviz-2.46.0/cmd/mingle/: Makefile.am  Makefile.in  mingle.vcxproj  minglemain.c
graphviz-2.46.0/cmd/smyrna/: Makefile.am  Makefile.in  arcball.c  arcball.h  draw.c  draw.h  glexpose.c  glmotion.c  gltemplate.c  glutrender.c  gvprpipe.c  gvprpipe.h  hier.c  hier.h  main.c  polytess.c  smyrna.vcxproj  smyrna_utils.c  smyrna_utils.h  smyrnadefs.h  topfisheyeview.c  topviewdefs.h  topviewfuncs.c  trackball.c  tvnodes.c  viewport.c  viewport.h  viewportcamera.c  viewportcamera.h
graphviz-2.46.0/cmd/smyrna/gui/: callbacks.c  frmobjectui.c  glcompui.c  gui.c  gui.h  menucallbacks.c  toolboxcallbacks.c  topviewsettings.c
graphviz-2.46.0/cmd/tools/: Makefile.am  Makefile.in  acyclic.c  acyclic.vcxproj  bcomps.c  bcomps.vcxproj  ccomps.c  ccomps.vcxproj  colxlate.c  convert.h  cvtgxl.c  dijkstra.c  dijkstra.vcxproj  gc.c  gc.vcxproj  gml2gv.c  gml2gv.h  gml2gv.vcxproj  gml2gv.vcxproj.filters  gmlparse.c  gmlparse.h  gmlparse.y  gmlscan.c  gmlscan.l  graph_generator.c  graphml2gv.c  graphml2gv.vcxproj  graphml2gv.vcxproj.filters  gv2gml.c  gv2gml.vcxproj  gv2gml.vcxproj.filters  gv2gxl.c  gvcolor.c  gvcolor.vcxproj  gvgen.c  gvgen.vcxproj  gvpack.c  gvpack.vcxproj  gxl2gv.c  gxl2gv.vcxproj  (+14 more)
graphviz-2.46.0/contrib/: Makefile.in
graphviz-2.46.0/contrib/prune/: Makefile.am  Makefile.in  generic_list.c  prune.c  prune.vcxproj
graphviz-2.46.0/debian/: TODO  changelog  graphviz-doc.install  libgraphviz4.lintian-overrides  libgv-python.install  rules
graphviz-2.46.0/doc/: Makefile.in
graphviz-2.46.0/dot.demo/: Makefile  Makefile.builtins  Makefile.python_wrapper  Makefile.python_wrapper_builtins  demo.c  dot.c  dot_demo.vcproj  example.c  neatopack.c  simple.c
graphviz-2.46.0/graphs/: Makefile.in
graphviz-2.46.0/libltdl/: Makefile.in  configure
graphviz-2.46.0/m4/: README
graphviz-2.46.0/macosx/: GVAttributeInspectorController.h  GVAttributeInspectorController.m  GVDocument.h  GVDocument.m  GVExportViewController.h  GVExportViewController.m  GVGraphArguments.h  GVGraphArguments.m  GVGraphDefaultAttributes.h  GVGraphDefaultAttributes.m  GVWindowController.h  GVWindowController.m  GVZGraph.h  GVZGraph.m  Info.plist  graphviz_prefix.pch
graphviz-2.46.0/plugin/: Makefile.in
graphviz-2.46.0/plugin/xlib/: Makefile.am  Makefile.in  gvdevice_xlib.c  gvplugin_xlib.c  vimdot.sh
graphviz-2.46.0/redhat/: graphviz.spec.fedora  graphviz.spec.fedora.in  graphviz.spec.rhel
graphviz-2.46.0/rtest/: Makefile.am  Makefile.in  rtest.py  test_regression.py  tests.txt  tests_subset.txt
graphviz-2.46.0/rtest/linux.x86/: AvantGarde_dot.ps  Bookman_dot.ps  Courier_dot.ps  Helvetica_dot.ps  Makefile.am  Makefile.in  NewCenturySchlbk_dot.ps  Palatino_dot.ps  Times_dot.ps  ZapfChancery_dot.ps  ZapfDingbats_dot.ps  arrows_dot.gv  arrows_dot.ps  cairo_dot_cairo.ps  center_dot.ps  clusters_dot.ps  clustlabel_dot.ps  clustlabel_dot1.ps  clustlabel_dot2.ps  clustlabel_dot3.ps  clustlabel_dot6.ps  clustlabel_dot7.ps  colors_dot.ps  colorscheme_dot.ps  compound_dot.gv  crazy_dot.ps  dir_dot.ps  dotsplines_dot.gv  dotsplines_dot1.gv  edgeclip_dot.gv  flatedge_dot.gv  html2_dot.gv  html2_dot.ps  html_dot.gv  html_dot.ps  layers_dot.ps  mode_neato.ps  mode_neato1.ps  mode_neato2.ps  model_neato.ps  (+40 more)
graphviz-2.46.0/share/: Makefile.in
graphviz-2.46.0/tclpkg/: Makefile.in
graphviz-2.46.0/tclpkg/gdtclft/: Makefile.am  Makefile.in
graphviz-2.46.0/tclpkg/gdtclft/demo/: Makefile.in
graphviz-2.46.0/tests/: Makefile.in
graphviz-2.46.0/tests/regression_tests/shapes/reference/: Makefile.am  Makefile.in
model/: baseline.py  current_model.py  loss.py  metric.py  model.py  wavenet.py
model/baseline/: baseline.py  esg.py  esg_util.py  graph.py
model/hyperlstm/: hyperlstm.py  lstm.py
result/: GRU.out  LSTM.out  RNN.out
trainer/: trainer.py
utils/: util.py
wandb/: latest-run  settings
wandb/run-20221206_171432-36gbkbbx/: run-36gbkbbx.wandb
wandb/run-20221206_174659-wz8zhgpd/: run-wz8zhgpd.wandb
wandb/run-20221206_215115-25g3t6p3/: run-25g3t6p3.wandb
wandb/run-20221206_215421-10dkpsn2/: run-10dkpsn2.wandb
wandb/run-20221208_041524-1cp4d1ot/: run-1cp4d1ot.wandb
wandb/run-20221208_041635-sslunwgr/: run-sslunwgr.wandb
wandb/run-20221208_042135-1mts2hzz/: run-1mts2hzz.wandb
(+772 files in other folders)
