REFERENCE_FILES = \
	arrows_dot.gv \
	arrows_dot.ps \
	arrowsize_dot.png \
	AvantGarde_dot.png \
	AvantGarde_dot.ps \
	Bookman_dot.png \
	Bookman_dot.ps \
	cairo_dot_cairo.png \
	cairo_dot_cairo.ps \
	cairo_dot_cairo.svg \
	center_dot.png \
	center_dot.ps \
	clusters_dot.png \
	clusters_dot.ps \
	clustlabel_dot1.ps \
	clustlabel_dot2.ps \
	clustlabel_dot3.ps \
	clustlabel_dot4.ps \
	clustlabel_dot5.ps \
	clustlabel_dot6.ps \
	clustlabel_dot7.ps \
	clustlabel_dot.ps \
	color_dot1.png \
	color_dot.png \
	colorscheme_dot.png \
	colorscheme_dot.ps \
	colors_dot.ps \
	compound_dot.gv \
	Courier_dot.png \
	Courier_dot.ps \
	crazy_dot.png \
	crazy_dot.ps \
	decorate_dot.png \
	dir_dot.ps \
	dotsplines_dot1.gv \
	dotsplines_dot.gv \
	edgeclip_dot.gv \
	fdp_clus_fdp.png \
	flatedge_dot.gv \
	grdangles_dot.png \
	grdangles_dot.svg \
	grdcluster_dot.png \
	grdcluster_dot.svg \
	grdcolors_dot.png \
	grdcolors_dot.svg \
	grdfillcolor_dot.png \
	grdfillcolor_dot.svg \
	grdlinear_angle_dot.png \
	grdlinear_angle_dot.svg \
	grdlinear_dot.png \
	grdlinear_dot.svg \
	grdlinear_node_dot.png \
	grdlinear_node_dot.svg \
	grdradial_angle_dot.png \
	grdradial_angle_dot.svg \
	grdradial_dot.png \
	grdradial_dot.svg \
	grdradial_node_dot.png \
	grdradial_node_dot.svg \
	grdshapes_dot.png \
	grdshapes_dot.svg \
	Helvetica_dot.png \
	Helvetica_dot.ps \
	html2_dot.gv \
	html2_dot.ps \
	html2_dot.svg \
	html_dot.gv \
	html_dot.ps \
	inv_inv_dot.png \
	inv_nul_dot.png \
	inv_val_dot.png \
	japanese_dot.png \
	layers_dot.ps \
	model_neato1.ps \
	model_neato.ps \
	mode_neato1.ps \
	mode_neato2.ps \
	mode_neato.ps \
	neatosplines_neato1.gv \
	neatosplines_neato.gv \
	nestedclust_dot.gv \
	NewCenturySchlbk_dot.png \
	NewCenturySchlbk_dot.ps \
	nojustify_dot_cairo.ps \
	nojustify_dot_gd.png \
	nojustify_dot.png \
	nojustify_dot.ps \
	nul_inv_dot.png \
	nul_nul_dot.png \
	nul_val_dot.png \
	ordering_dot1.gv \
	ordering_dot.gv \
	overlap_neato1.gv \
	overlap_neato.gv \
	pack_neato1.gv \
	pack_neato2.gv \
	pack_neato.gv \
	page_neato1.ps \
	page_neato2.ps \
	page_neato.ps \
	Palatino_dot.png \
	Palatino_dot.ps \
	polypoly_dot.png \
	polypoly_dot.ps \
	ports_dot.gv \
	pslib_dot.ps \
	ps_user_shapes_dot.ps \
	rankdir_dot1.gv \
	rankdir_dot2.gv \
	rankdir_dot.gv \
	rd_rules_dot.png \
	record_dot.gv \
	record_dot.ps \
	root_circo.gv \
	rootlabel_dot1.ps \
	rootlabel_dot2.ps \
	rootlabel_dot3.ps \
	rootlabel_dot4.ps \
	rootlabel_dot5.ps \
	rootlabel_dot6.ps \
	rootlabel_dot7.ps \
	rootlabel_dot.ps \
	root_twopi.gv \
	rotate_dot1.png \
	rotate_dot1.ps \
	rotate_dot.png \
	rotate_dot.ps \
	rowcolsep_dot1.gv \
	rowcolsep_dot.gv \
	russian_dot.png \
	sb_box_dbl_dot.png \
	sb_box_dot.png \
	sb_circle_dbl_dot.png \
	sb_circle_dot.png \
	shapes_dot.gv \
	shapes_dot.ps \
	sides_dot.ps \
	size_ex_dot.png \
	size_ex_dot.ps \
	size_neato.png \
	size_neato.ps \
	sl_box_dbl_dot.png \
	sl_box_dot.png \
	sl_circle_dbl_dot.png \
	sl_circle_dot.png \
	sq_rules_dot.png \
	sr_box_dbl_dot.png \
	sr_box_dot.png \
	sr_circle_dbl_dot.png \
	sr_circle_dot.png \
	st_box_dbl_dot.png \
	st_box_dot.png \
	st_circle_dbl_dot.png \
	st_circle_dot.png \
	style_dot.png \
	style_dot.ps \
	Symbol_dot.png \
	Times_dot.png \
	Times_dot.ps \
	url_dot.cmapx \
	url_dot.cmapx_np \
	url_dot.imap \
	url_dot.imap_np \
	url_dot.ps2 \
	url_dot.svg \
	user_shapes_dot_gd.png \
	user_shapes_dot.ps \
	val_inv_dot.png \
	val_nul_dot.png \
	val_val_dot.png \
	viewport_neato1.png \
	viewport_neato1.ps \
	viewport_neato2.png \
	viewport_neato2.ps \
	viewport_neato.png \
	viewport_neato.ps \
	weight_dot.gv \
	xlabels_dot.png \
	xlabels_neato.png \
	ZapfChancery_dot.png \
	ZapfChancery_dot.ps \
	ZapfDingbats_dot.png \
	ZapfDingbats_dot.ps

EXTRA_DIST = $(REFERENCE_FILES)
