REFERENCE_FILES = \
	assembly.gv \
	assembly.svg \
	assembly.xdot \
	box3d.gv \
	box3d.svg \
	box3d.xdot \
	box.gv \
	box.svg \
	box.xdot \
	cds.gv \
	cds.svg \
	cds.xdot \
	circle.gv \
	circle.svg \
	circle.xdot \
	component.gv \
	component.svg \
	component.xdot \
	cylinder.gv \
	cylinder.svg \
	cylinder.xdot \
	diamond.gv \
	diamond.svg \
	diamond.xdot \
	doublecircle.gv \
	doublecircle.svg \
	doublecircle.xdot \
	doubleoctagon.gv \
	doubleoctagon.svg \
	doubleoctagon.xdot \
	egg.gv \
	egg.svg \
	egg.xdot \
	ellipse.gv \
	ellipse.svg \
	ellipse.xdot \
	fivepoverhang.gv \
	fivepoverhang.svg \
	fivepoverhang.xdot \
	folder.gv \
	folder.svg \
	folder.xdot \
	hexagon.gv \
	hexagon.svg \
	hexagon.xdot \
	house.gv \
	house.svg \
	house.xdot \
	insulator.gv \
	insulator.svg \
	insulator.xdot \
	invhouse.gv \
	invhouse.svg \
	invhouse.xdot \
	invtrapezium.gv \
	invtrapezium.svg \
	invtrapezium.xdot \
	invtriangle.gv \
	invtriangle.svg \
	invtriangle.xdot \
	larrow.gv \
	larrow.svg \
	larrow.xdot \
	lpromoter.gv \
	lpromoter.svg \
	lpromoter.xdot \
	Mcircle.gv \
	Mcircle.svg \
	Mcircle.xdot \
	Mdiamond.gv \
	Mdiamond.svg \
	Mdiamond.xdot \
	Msquare.gv \
	Msquare.svg \
	Msquare.xdot \
	none.gv \
	none.svg \
	none.xdot \
	note.gv \
	note.svg \
	note.xdot \
	noverhang.gv \
	noverhang.svg \
	noverhang.xdot \
	octagon.gv \
	octagon.svg \
	octagon.xdot \
	oval.gv \
	oval.svg \
	oval.xdot \
	parallelogram.gv \
	parallelogram.svg \
	parallelogram.xdot \
	pentagon.gv \
	pentagon.svg \
	pentagon.xdot \
	plain.gv \
	plain.svg \
	plaintext.gv \
	plaintext.svg \
	plaintext.xdot \
	plain.xdot \
	point.gv \
	point.svg \
	point.xdot \
	polygon.gv \
	polygon.svg \
	polygon.xdot \
	primersite.gv \
	primersite.svg \
	primersite.xdot \
	promoter.gv \
	promoter.svg \
	promoter.xdot \
	proteasesite.gv \
	proteasesite.svg \
	proteasesite.xdot \
	proteinstab.gv \
	proteinstab.svg \
	proteinstab.xdot \
	rarrow.gv \
	rarrow.svg \
	rarrow.xdot \
	rectangle.gv \
	rectangle.svg \
	rectangle.xdot \
	rect.gv \
	rect.svg \
	rect.xdot \
	restrictionsite.gv \
	restrictionsite.svg \
	restrictionsite.xdot \
	ribosite.gv \
	ribosite.svg \
	ribosite.xdot \
	rnastab.gv \
	rnastab.svg \
	rnastab.xdot \
	rpromoter.gv \
	rpromoter.svg \
	rpromoter.xdot \
	septagon.gv \
	septagon.svg \
	septagon.xdot \
	signature.gv \
	signature.svg \
	signature.xdot \
	square.gv \
	square.svg \
	square.xdot \
	star.gv \
	star.svg \
	star.xdot \
	tab.gv \
	tab.svg \
	tab.xdot \
	terminator.gv \
	terminator.svg \
	terminator.xdot \
	threepoverhang.gv \
	threepoverhang.svg \
	threepoverhang.xdot \
	trapezium.gv \
	trapezium.svg \
	trapezium.xdot \
	triangle.gv \
	triangle.svg \
	triangle.xdot \
	tripleoctagon.gv \
	tripleoctagon.svg \
	tripleoctagon.xdot \
	underline.gv \
	underline.svg \
	underline.xdot \
	utr.gv \
	utr.svg \
	utr.xdot

EXTRA_DIST = $(REFERENCE_FILES)
